# deficiency-chatbot

./: .env.example  .gitignore  DIAGNOSIS_COMBIPATCH.md  Makefile  PHASES.md  README.md  RELIABILITY_PLAN.md  app.yaml  pyproject.toml  requirements.txt
Sample Data/: ANDA-TDDS-Deficiency Roadmap.xlsm  Amneal_Exp.md  PLAN.md
data/: README.md
docs/: PIPELINE.md  runbook.md
frontend/: .env.example
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: agent-activity.tsx  faults.tsx  flaw-card.tsx  recommendations.tsx  upload-panel.tsx
frontend/src/lib/: api-client.ts  ws-client.ts
frontend/src/types/: index.ts
notebooks/: build_index.py  deploy_adapters.py  deploy_rapidocr_endpoint.py  fine_tune.py  prepare_training_data.py  seed_data.py
scripts/: dump_parsed_output.py  setup_mac.sh
src/: config.py
src/agents/: event_bus.py  orchestrator.py
src/agents/correction/: evaluator.py  loop.py  suggestor.py
src/api/: main.py  ws.py
src/databricks/: delta.py  serving.py  vector.py
src/llm/: client.py  prompts.py  structured.py
src/parse/: layout.py  ocr.py  pdf.py  section_splitter.py
src/retrieval/: knowledge_base.py  vector_search.py
src/schemas/: __init__.py  corrections.py  documents.py  events.py  faults.py  flaws.py  llm.py
tests/integration/: test_api.py
tests/unit/: test_anchor.py  test_classifier.py  test_detection.py  test_detection_agent.py  test_event_bus.py  test_extraction_handoff.py  test_flaw_types.py  test_health.py  test_layout.py  test_parse.py  test_schemas.py  test_section_splitter.py  test_structured.py
(+23 files in other folders)
