[project]
name = "defpredict"
version = "0.1.0"
description = "Regulatory deficiency prediction with cited evidence"
requires-python = ">=3.11"
dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "websockets>=12.0",
    # data
    "openpyxl>=3.1",
    "pandas>=2.2",
    # parsing
    "pymupdf>=1.24",
    "python-docx>=1.1",
    # agents
    "autogen-agentchat>=0.4",
    "autogen-ext[openai]>=0.4",
    # llm
    "openai>=1.40",
    # embedding
    "sentence-transformers>=3.0",
    # databricks
    "databricks-sdk>=0.30",
    "databricks-sql-connector>=3.1",
    # observability
    "structlog>=24.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    # local dev only -- vector search fallback
    "faiss-cpu>=1.8",
]
finetune = [
    "peft>=0.11",
    "trl>=0.9",
    "torch>=2.3",
    "transformers>=4.42",
    "bitsandbytes>=0.43",
    "datasets>=2.20",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
